<resources>
    <string name="app_name">上海京剧院</string>
    <string name="hint_account_no">账号</string>
    <string name="hint_password">密码</string>
    <string name="login_remember_me">记住密码</string>
    <string name="login_login">登录</string>
    <string name="prompt_internet_connection_broken">无法访问互联网，请检查网络连接。</string>
    <string name="prompt_system_error">系统错误，请稍后再试。</string>
    <string name="login_failed">账号或密码错误，请重试。</string>
    <string name="main_flow">待审批\n申请单</string>
    <string name="main_doc">待处理\n公文</string>
    <string name="main_calendar">日程表</string>
    <string name="main_flowInquiry">一般\n申请单</string>
    <string name="main_flow2Inquiry">财务\n申请单</string>
    <string name="main_docInquiry">公文</string>
    <string name="main_notice">资讯</string>
    <string name="main_mail">邮件</string>
    <string name="main_form_request">财务报销申请</string>
    <string name="budget_item">报销项目</string>
    <string name="request_type">申请单类型</string>

</resources>
