<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#F5F5F5"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/fragment_login_userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/hint_account_no">
        </EditText>

        <EditText
            android:id="@+id/fragment_login_passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="?android:attr/editTextBackground"
            android:hint="@string/hint_password"
            android:inputType="textPassword">
        </EditText>

        <CheckBox
            android:id="@+id/fragment_login_rememberMeCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/login_remember_me"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp">

        <Button
            android:id="@+id/fragment_login_loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/login_login"
            />

    </LinearLayout>

</LinearLayout>